added styles to css page, refactored margins and replaced divs with buttons

--- a/one.html
+++ b/one.html
@@ -12,35 +12,35 @@
     <div class="calculator">
         <div class="container">
             <div class="screen">
-                <!-- <section></section> -->
+                
             </div>
             <div class="buttons">
                     <div class="row" id="level-1 ">
-                        <div class="box" id="boxSquare1">C</div>
-                        <div class="box"><b>←</b></div>
-                        <div class="box operator" >/</div>
+                        <button class="box" id="boxSquare1">C</button>
+                        <button class="box"><b>←</b></button>
+                        <button class="box operator" >&divide</button>
                     </div>
                     <div class="row" id="level-2">
-                        <div class="box">7</div>
-                        <div class="box">8</div>
-                        <div class="box">9</div>
-                        <div class="box operator">X</div>
+                        <button class="box">7</button>
+                        <button class="box">8</button>
+                        <button class="box">9</button>
+                        <button class="box operator">	× </button>
                     </div>
                     <div class="row" id="level-3">
-                        <div class="box">4</div>
-                        <div class="box">5</div>
-                        <div class="box">6</div>
-                        <div class="box operator">-</div>
+                        <button class="box">4</button>
+                        <button class="box">5</button>
+                        <button class="box">6</button>
+                        <button class="box operator">-</button>
                     </div>
                     <div class="row" id="level-4">
-                        <div class="box">1</div>
-                        <div class="box">2</div>
-                        <div class="box">3</div>
-                        <div class="box operator" >+</div>
+                        <button class="box">1</button>
+                        <button class="box">2</button>
+                        <button class="box">3</button>
+                        <button class="box operator" >+</button>
                     </div>
                     <div class="row" id="level-5">
-                        <div class="box" id="boxCube1">0</div>
-                        <div class="box operator" id="boxCube2">=</div>
+                        <button class="box" id="boxCube1">0</button>
+                        <button class="box operator" id="boxCube2">=</button>
                     </div>
             </div>
         </div>
