--- a/one.html
+++ b/one.html
@@ -12,7 +12,9 @@
     <div class="calculator">
         <div class="container">
             <div class="screen">
-                
+                <div class="screen-box">
+
+                </div>
             </div>
             <div class="buttons">
                     <div class="row" id="level-1 ">
