--- a/one.html
+++ b/one.html
@@ -13,20 +13,22 @@
         <div class="container">
             <div class="screen">
                 <div class="screen-box">
-
+                    <section class="screen-output">
+                        0
+                    </section>
                 </div>
             </div>
             <div class="buttons">
                     <div class="row" id="level-1 ">
-                        <button class="box" id="boxSquare1">C</button>
+                        <button class="box" id="boxSquare1" >C</button>
                         <button class="box"><b>←</b></button>
-                        <button class="box operator" >&divide</button>
+                        <button class="box operator" >÷</button>
                     </div>
                     <div class="row" id="level-2">
                         <button class="box">7</button>
                         <button class="box">8</button>
                         <button class="box">9</button>
-                        <button class="box operator">	× </button>
+                        <button class="box operator">×</button>
                     </div>
                     <div class="row" id="level-3">
                         <button class="box">4</button>
@@ -44,18 +46,10 @@
                         <button class="box" id="boxCube1">0</button>
                         <button class="box operator" id="boxCube2">=</button>
                     </div>
-            </div>
+                </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-        <script src="./one.js"></script>
+    <script src="./one.js"></script>
 </body>
 
 </html>
