Updated Head Tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Bishal</title>
+    <meta name="keywords" content="HTML, CSS, JavaScript, Calculator, Standard Calculator, Web-Calculator">
+    <meta name="description" content="Free Web based Calculator">
+    <meta name="author" content="Bishal kumar">
+    <title>Standard Calculator</title>
     <link rel="stylesheet" href="one.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
