--- a/index.html
+++ b/index.html
@@ -29,20 +29,25 @@
                         <button class="box">8</button>
                         <button class="box">9</button>
                         <button class="box operator">×</button>
+                        <div class="row" id="level-3">
+                        <button class="box">7</button>
+                        <button class="box">8</button>
+                        <button class="box">9</button>
+                        <button class="box operator">×</button>
                     </div>
-                    <div class="row" id="level-3">
+                    <div class="row" id="level-4">
                         <button class="box">4</button>
                         <button class="box">5</button>
                         <button class="box">6</button>
                         <button class="box operator">-</button>
                     </div>
-                    <div class="row" id="level-4">
+                    <div class="row" id="level-5">
                         <button class="box">1</button>
                         <button class="box">2</button>
                         <button class="box">3</button>
                         <button class="box operator" >+</button>
                     </div>
-                    <div class="row" id="level-5">
+                    <div class="row" id="level-6">
                         <button class="box" id="boxCube1">0</button>
                         <button class="box operator" id="boxCube2">=</button>
                     </div>
