--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <button class="box">8</button>
                         <button class="box">9</button>
                         <button class="box operator">×</button>
+                    </div>
                         <div class="row" id="level-3">
                         <button class="box">7</button>
                         <button class="box">8</button>
@@ -46,6 +47,10 @@
                         <button class="box">2</button>
                         <button class="box">3</button>
                         <button class="box operator" >+</button>
+                    </div>
+                    <div class="row" id="level-6">
+                        <button class="box" id="boxCube1">0</button>
+                        <button class="box operator" id="boxCube2">=</button>
                     </div>
                     <div class="row" id="level-6">
                         <button class="box" id="boxCube1">0</button>
